Update build dependencies, remove guava, apache httpmime, and apache httpclient.